Openshift/Routes/500-simple-app-with-route/src/01-namespace.yaml
  
apiVersion: v1
kind: Namespace
metadata:
  name: g-app-store-pro
  labels:
    app:  g-app-store-app
